# macos-routing-table

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: simple.rs
sample-tables/: sample-table.txt
src/: entity.rs  lib.rs  route_entry.rs  routing_flag.rs  routing_table.rs
tests/: live.rs
