[package]
edition = "2018"
name = "macos-routing-table"
version = "0.1.0"
description = "macOS Routing table parser"
license = "Apache-2.0"
repository = "https://github.com/shutton/macos-routing-table.git"

[dependencies]
cidr = { version = "0.2", features = ["serde"] }
futures = "0.3"
mac_address = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1"

[lints.clippy]
all = "warn"
pedantic = "warn"
